Add number files and output statements

--- a/LabOne/LabOne/LabOne.vcxproj
+++ b/LabOne/LabOne/LabOne.vcxproj
@@ -159,6 +159,11 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="num1.txt" />
+    <Text Include="num2.txt" />
+    <Text Include="num3.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
